# EuoraCraft-Launcher

./: .gitignore  .gitmodules  EuoraCraft-Launcher.spec  README.md  Tauri.toml  main.py  plugin.md  project-scan-report.html  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ruff.yml  submodule.yml
ECL/: __init__.py  app.py  launcher.py  tauri_app.py
ECL/adapters/: __init__.py  adapter.py  tauri.py  webview.py
ECL/api/: __init__.py  events.py  handlers.py
ECL/auth/: __init__.py  authlib.py  crypto.py  manager.py  microsoft.py  models.py
ECL/common/: __init__.py  build_env.py  config.py  env.py  logger.py  state.py  version.py
ECL/game/: __init__.py
ECL/game/Core/: C_Downloader.py  C_FilesChecker.py  C_GetGames.py  C_Libs.py  C_Skin.py  ECLauncherCore.py  InstancesManager.py  __init__.py
ECL/java/: __init__.py  detector.py  models.py
ECL/mods/: manager.py  pack.py  search.py
ECL/plugin/: __init__.py  framework.py  importer.py  plugin.py  registry.py
ECL/resources/: manager.py
capabilities/: default.toml
docs/: backend-dev-guide.md  frontend-dev-guide.md  plugin-dev-guide.md
docs/backend-dev-doc/: backend-dev-doc.html
docs/backend-intro/: backend-intro.html
docs/post-dev-plan/: post-dev-plan.html
game-integration-task-list/: game-integration-task-list.html
plugin_config/: mouse_effect.json
plugins/hello_world/: main.py  plugin.json
plugins/mouse_effect/: main.py  plugin.json
resources/system_plugins/crash_analyzer/: main.py  plugin.json
tests/: test_c_getgames.py
