[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EuoraCraft-Launcher"
version = "0.1.0"
description = "EuoraCraft Launcher"
authors = [
    {name = "ECLTeam", email = "EuoraCraft-Studio@outlook.com"},
]
dependencies = [
    "pytauri-wheel>=0.8.0",
    "pytauri>=0.8.0",
    "anyio>=4.0",
    "colorama>=0.4.0",
    "requests>=2.30.0",
    "pyperclip>=1.8.0",
    "cryptography>=42.0.0",
    "keyring>=24.0.0",
    "keyrings-alt>=4.0.0",
    "msal>=1.20.0",
    "Pillow>=10.0.0",
    "pydantic>=2.0.0"
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL-3.0"}
keywords = ["minecraft", "launcher", "game"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPL-3.0+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/ECLTeam/EuoraCraft-Launcher"
Repository = "https://github.com/ECLTeam/EuoraCraft-Launcher.git"
Issues = "https://github.com/ECLTeam/EuoraCraft-Launcher/issues"

[project.scripts]
euoracraft-launcher = "main:main"

[project.gui-scripts]
EuoraCraft-Launcher = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ECL*", "ui*"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["ECL/common/version.py:__version__"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install build && python -m build"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "docs", "style", "refactor", "test", "chore"]

[tool.semantic_release.remote]
type = "github"

[tool.euoracraft]
version_type = "dev"
build_number = 0

[tool.pyinstaller]
spec_file = "EuoraCraft-Launcher.spec"
onefile = false
console = true
icon = "assets/icon.ico"
name = "EuoraCraft Launcher"

[tool.release]
enabled = true
auto_tag = true
platforms = ["windows"]
architectures = ["x64"]

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4
exclude = [
    "EuoraCraftLauncher-UI",
    "frontend",
    "ECL_Libs",
    "resources",
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    ".pytest_cache",
    ".mypy_cache",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "N818",   # Exception name should end with Error
    "N999",   # Invalid module name (ECL is project-specific)
    "RUF001", # Ambiguous unicode char in strings (false positives in Chinese)
    "RUF002", # Ambiguous unicode char in docstrings (false positives in Chinese)
    "RUF003", # Ambiguous unicode char in comments (false positives in Chinese)
    "RUF012", # Mutable class attributes should use typing.ClassVar
]

[tool.ruff.lint.per-file-ignores]
"ECL/game/Core/*.py" = ["E701"]
"ECL/common/logger.py" = ["N802", "N803"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["ECL"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
